Remove custom opens/exports