@@ -19,15 +19,6 @@ tasks.withType<Test> {
 
   maxParallelForks = 1
 
-  jvmArgs(
-    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-    "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.management/sun.management=ALL-UNNAMED",
-    "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED"
-  )
-
   systemProperty("java.util.logging.config.class", "org.ku.kc.logging.TestLoggingConfigurer")
 
   testLogging {
